[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = ["lembas"]
description = ''
dynamic = ["version"]
license = "MIT"
name = "lembas-reef3d"
readme = "README.md"
requires-python = ">=3.8"

[project.entry-points.lembas]
_ = "lembas_reef3d"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.hatch.version]
path = "src/lembas_reef3d/__about__.py"
