[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "setuptools-scm[toml]>=6.2"]

[project]
dependencies = ["lembas"]
description = "A lembas plugin for reef3d"
dynamic = ["version"]
license = {text = "MIT"}
name = "lembas-reef3d"
readme = "README.md"
requires-python = ">=3.9"

[project.entry-points.lembas]
_ = "lembas_reef3d"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
force_single_line = true
profile = "black"

[tool.setuptools_scm]
write_to = "src/lembas_reef3d/_version.py"
